# robotic-prototype-ros-workspace

./: CMakeLists.txt  README.md  package.xml
launch/: fsktm_delivery_detection.launch  fsktm_receptionist.launch
src/: delivery_detection_node.py  receptionist_node.py
