<?xml version="1.0"?>
<package format="2">
  <name>wqf7010_aa_prototype_development</name>
  <version>0.0.1</version>
  <description>The prototype development for WQF7010 Alternative Assessment. A human-robot interaction prototype program that applies two AI algorithms based on computer vision (Face, People, and Yolo v3 object detections) and speech-to-text processing.</description>
 

  <maintainer email="22110047@siswa.um.edu.my">Ahmad Syahir</maintainer>
  <maintainer email="22121327@siswa.um.edu.my">Khor Shu Yan</maintainer>
  <maintainer email="22111371@siswa.um.edu.my">Teo Yin Yin</maintainer>
  <maintainer email="23060314@siswa.um.edu.my">Tham Weng Wai</maintainer>
  <!-- <author email="23060314@siswa.um.edu.my">Tham Weng Wai</author> -->


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/wqf7010_aa_prototype_development</url> -->
  <url type="repository">https://github.com/23060314/WQF7010-AA-Prototype-Development</url>
  <url type="bugtracker">https://github.com/23060314/WQF7010-AA-Prototype-Development/issues</url>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_view</build_depend>
  <build_depend>opencv_apps</build_depend>
  <build_depend>robot_vision_msgs</build_depend>
  <build_depend>robot_vision_openvino</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_export_depend>image_view</build_export_depend>
  <build_export_depend>opencv_apps</build_export_depend>
  <build_export_depend>robot_vision_msgs</build_export_depend>
  <build_export_depend>robot_vision_openvino</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sound_play</build_export_depend>
  <build_export_depend>usb_cam</build_export_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>opencv_apps</exec_depend>
  <exec_depend>robot_vision_msgs</exec_depend>
  <exec_depend>robot_vision_openvino</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>usb_cam</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
